# ddoresolver-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
config/: jolo_rinkeby.json
src/: error.rs  jolo.rs  keri.rs  key.rs  lib.rs
src/jolo/: ipfs.rs  mod.rs
src/resources/: jolo_token.json
