[package]
name = "ddoresolver-rs"
version = "0.3.0"
documentation = "https://docs.rs/ddoresolver-rs"
description = "function to resolve did document from url"
license = "Apache-2.0"
repository = "https://github.com/jolocom/ddoresolver-rs"
readme = "README.md"
authors = ["Ivan Temchenko <35359595i@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
did-key = { path = "../../did-key.rs", version = "0.0.13", optional = true }
keri = { version = "0.6", optional = true }
jsonrpc = { version = "0.12.0", optional = true }
web3 = { version = "0.17.0", optional = true }
hex = { version = "0.4.3", optional = true }
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base58 = "0.1.0"
base64-url = "1.4.9"

[dev-dependencies]
x25519-dalek = "1.1.0"
tokio = { version = "1", features = ["rt", "macros"] }

[features]
default = ["didkey", "keriox", "jolo"]
all = ["didkey", "keriox"]
didkey = ["did-key"]
keriox = ["keri"]
jolo = ["jsonrpc", "web3", "hex"]
